--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+ .App {
   text-align: center;
 }
 
@@ -35,4 +35,22 @@
   to {
     transform: rotate(360deg);
   }
+} 
+
+.iconButton{
+  transition: all 0.2s !important;
 }
+.iconButton:hover{
+  background-color:  #c5c5c5  !important;
+  box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.4) ;
+}
+
+.todoCard{
+  transition: all 0.2s !important;
+}
+.todoCard:hover{
+  padding-bottom:20px ;
+  padding-top: 20px;
+  box-shadow: 0px 7px 7px rgba(0, 0, 0, 0.4) ;
+}
+
